# Predictive-Modeling-for-Chemical-Plants

./: .gitignore  README.md  environment.yml  pyproject.toml
Supervised_Learning/notebooks/: RandomForest.ipynb  SVM.ipynb
Unsupervised_Learning/: unsupervised_report.md
Unsupervised_Learning/notebooks/: te_lle_clusters.ipynb  te_mds_clusters.ipynb
notebooks/: te_pacmap_clusters.ipynb  te_pca_clusters.ipynb  te_tsne_clusters.ipynb
notebooks/data/: RawData.xlsx
src/tepackage/: data_preprocessing.py  data_reducer.py  data_treatment.py  shared.py
