[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "che_4230_project"
version = "0.1.0"
authors = [{ name = "Marcus pereira", email = "mpere75@lsu.edu" },
{name="Joe Solomon", email="UPDATE EMAIL"},{name="Seth Somtee", email="UPDATE EMAIL"}]
description = "Advanced Process Control Systems Project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.0.2",
    "torch>=2.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "jupyter>=1.0.0",
    "seaborn>=0.11.2",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "black", "flake8", "pytest"]
