[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tepackage"
version = "0.1.0"
authors = [{ name = "Marcus Pereira", email = "mpere75@lsu.edu" },
            {name="Joe Solomon", email="update1@email.com"},
            {name="Seth Somtee", email="update2@email.com"},
            {name="Toheeb", email="update3@email.com"},
            ]
description = "Advanced Process Control Systems Project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.0.2",
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "jupyter>=1.0.0",
    "seaborn>=0.11.2",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "black", "flake8", "pytest"]
